# clip-repo-demo

./: .gitignore  README.md  pyproject.toml
data/: .gitkeep
logs/: .gitkeep
notebook/: dataset object.ipynb  dataset visualization.html  dataset visualization.ipynb  test.ipynb
results/: .gitkeep
script/: download_data.sh  gradio_inference.py  inference.py  pretrain.py
src/: dataset.py
weights/: .gitkeep
